# rest_api_demo

./: .gitignore  README.md  load_data.py  main.py  pyproject.toml
app/: __init__.py  models.py  routes.py  utils.py
